# haystack-evaluation

./: .gitignore  .pre-commit-config.yaml  README.md  aggregate_results.py  arago_evaluation.py  aragog_analyze_results.ipynb  aragog_evaluation.ipynb  evaluation_arago.py  evaluation_braintrust.py  evaluation_mini_esg.py  evaluation_squad_.py  evaluation_squad_extractive_qa.ipynb  evaluation_squad_extractive_qa.py  evaluation_squad_rag.py  mini_esg_evaluation.py  pyproject.toml  squad_evaluation.py  utils.py
.github/workflows/: code_quality_checks.yml
architectures/: README.md  architectures.md  basic_rag.py  custom_splitter.py  extractive_qa.py
datasets/: README.md  datasets.md
datasets/ARAGOG/: eval_questions_relevant_doc.json
datasets/SQuAD-2.0/: build_rag_dataset_from_squad.py
evaluations/: README.md  analyze_aragog.ipynb  analyze_aragog_eval_results.ipynb  analyze_aragog_parameter_search.ipynb  arago_evaluation.py  evaluation_aragog.ipynb  evaluation_aragog.py  evaluation_aragog_harness.py  evaluation_sentence_window_retrieval.py  evaluation_squad_extractive_qa.ipynb  evaluation_squad_extractive_qa.py  evaluation_squad_rag.ipynb  evaluation_squad_rag.py  squad_evaluation.py  trec_evaluation.py
evaluations/architectures/: README.md  baseline_rag.py  basic_rag.py  extractive_qa.py  hyde_rag.py  sentence-window-retrieval.py  sentence_window_retrieval.py  sentence_window_retrieval_new.py
evaluations/results/aragog_parameter_search_2024_06_12/: detailed_all-MiniLM-L6-v2__top_k:1__chunk_size:128.csv  detailed_all-MiniLM-L6-v2__top_k:2__chunk_size:64.csv  detailed_all-MiniLM-L6-v2__top_k:3__chunk_size:128.csv  detailed_msmarco-distilroberta-base-v2__top_k:1__chunk_size:256.csv  detailed_msmarco-distilroberta-base-v2__top_k:2__chunk_size:128.csv  score_report_all-MiniLM-L6-v2__top_k:2__chunk_size:64.csv  score_report_msmarco-distilroberta-base-v2__top_k:1__chunk_size:256.csv  score_report_msmarco-distilroberta-base-v2__top_k:2__chunk_size:64.csv
evaluations/results/aragog_results/: detailed_all-MiniLM-L6-v2__top_k:1__chunk_size:128.csv  detailed_all-MiniLM-L6-v2__top_k:1__chunk_size:256.csv  detailed_all-MiniLM-L6-v2__top_k:1__chunk_size:64.csv  detailed_all-MiniLM-L6-v2__top_k:2__chunk_size:128.csv  detailed_all-MiniLM-L6-v2__top_k:2__chunk_size:256.csv  detailed_all-MiniLM-L6-v2__top_k:2__chunk_size:64.csv  detailed_all-MiniLM-L6-v2__top_k:3__chunk_size:128.csv  detailed_all-MiniLM-L6-v2__top_k:3__chunk_size:256.csv  detailed_all-MiniLM-L6-v2__top_k:3__chunk_size:64.csv  detailed_all-mpnet-base-v2__top_k:1__chunk_size:128.csv  detailed_all-mpnet-base-v2__top_k:1__chunk_size:256.csv  detailed_all-mpnet-base-v2__top_k:1__chunk_size:64.csv  detailed_all-mpnet-base-v2__top_k:2__chunk_size:128.csv  detailed_all-mpnet-base-v2__top_k:2__chunk_size:256.csv  detailed_all-mpnet-base-v2__top_k:2__chunk_size:64.csv  detailed_all-mpnet-base-v2__top_k:3__chunk_size:128.csv  detailed_all-mpnet-base-v2__top_k:3__chunk_size:256.csv  detailed_all-mpnet-base-v2__top_k:3__chunk_size:64.csv  detailed_msmarco-distilroberta-base-v2__top_k:1__chunk_size:128.csv  detailed_msmarco-distilroberta-base-v2__top_k:1__chunk_size:256.csv  detailed_msmarco-distilroberta-base-v2__top_k:1__chunk_size:64.csv  detailed_msmarco-distilroberta-base-v2__top_k:2__chunk_size:128.csv  detailed_msmarco-distilroberta-base-v2__top_k:2__chunk_size:256.csv  detailed_msmarco-distilroberta-base-v2__top_k:2__chunk_size:64.csv  detailed_msmarco-distilroberta-base-v2__top_k:3__chunk_size:128.csv  detailed_msmarco-distilroberta-base-v2__top_k:3__chunk_size:256.csv  detailed_msmarco-distilroberta-base-v2__top_k:3__chunk_size:64.csv  score_report_all-MiniLM-L6-v2__top_k:1__chunk_size:128.csv  score_report_all-MiniLM-L6-v2__top_k:1__chunk_size:256.csv  score_report_all-MiniLM-L6-v2__top_k:1__chunk_size:64.csv  score_report_all-MiniLM-L6-v2__top_k:2__chunk_size:128.csv  score_report_all-MiniLM-L6-v2__top_k:2__chunk_size:256.csv  score_report_all-MiniLM-L6-v2__top_k:2__chunk_size:64.csv  score_report_all-MiniLM-L6-v2__top_k:3__chunk_size:128.csv  score_report_all-MiniLM-L6-v2__top_k:3__chunk_size:256.csv  score_report_all-MiniLM-L6-v2__top_k:3__chunk_size:64.csv  score_report_all-mpnet-base-v2__top_k:1__chunk_size:128.csv  score_report_all-mpnet-base-v2__top_k:1__chunk_size:256.csv  score_report_all-mpnet-base-v2__top_k:1__chunk_size:64.csv  score_report_all-mpnet-base-v2__top_k:2__chunk_size:128.csv  (+14 more)
evaluations/results/results_aragog_2024_06_12/: detailed_all-MiniLM-L6-v2__top_k:1__chunk_size:256.csv  detailed_all-MiniLM-L6-v2__top_k:2__chunk_size:128.csv  detailed_all-MiniLM-L6-v2__top_k:2__chunk_size:256.csv  detailed_all-mpnet-base-v2__top_k:1__chunk_size:128.csv  detailed_all-mpnet-base-v2__top_k:1__chunk_size:256.csv  detailed_all-mpnet-base-v2__top_k:2__chunk_size:128.csv  detailed_all-mpnet-base-v2__top_k:2__chunk_size:256.csv  (+26 more)
evaluations/trec/: indexing.py  pipelines.py  trec_evaluation.py
evaluations/utils/: __init__.py  utils.py
utils/: __init__.py
(+666 files in other folders)
